Update to fix the screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,22 @@ VERSION:	1.0.0
     border-radius: 35px;
 }
 
+@media (max-width: 1100px) {
+  .overlay-desc {
+  width: 100%;
+  height: 100%;
+  margin-left: 0%;
+  margin-top: 0%;
+      border-radius: 0px;
+  }
+}
+
+@media (max-width: 400px) {
+  .overlay-desc h1{
+  font-size: 40px;
+  }
+}
+
 .email-form{
     border-width: 10px;
     border-color: #323232;
